# 2018-pyconau-homekit-python

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
src/: aircon.py  hap.py  util.py
systemd/: python-homekit.service
